# grand-pattern-ptx

./: AGENT.md  CMakeLists.txt  README.md
memory/: JOURNAL.md
src/host/: main.c  ptx_loader.c  ptx_loader.h  test_balance.c  test_batch_predict.c  test_correlation.c  test_cosine.c  test_decay.c  test_e2e.c  test_merge.c  test_vibe.c
src/kernels/: balance_check.ptx  batch_predict.ptx  correlation_matrix.ptx  cosine_similarity.ptx  decay.ptx  merge_candidates.ptx  vibe_compute.ptx
